--- a/TASK15/TASK13/t2.html
+++ b/TASK15/TASK13/t2.html
@@ -1,3 +1,4 @@
+<!DOCTYPE html>
 <body>
 
     <head>
@@ -9,14 +10,9 @@
     </head>
 
     <body>
-        
            <div class="a"> <input type="text" value="Elzero"></div>
         <div class="b">  <input type="text" placeholder="two"> </div>
     <div class="c">  <input type="text" placeholder="three"></div>
         
     </body>
-
-    </html>
-</body>
-
 </html>
